2013-06-17  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* eww.el (eww-convert-widgets): Put `help-echo' on input fields so that
	we can navigate to them.

	* shr.el (shr-colorize-region): Put the colours over the entire region.
	(shr-inhibit-decoration): New variable.
	(shr-add-font): Use it to inhibit text property decorations while doing
	preliminary table renderings.  This speeds up typical Wikipedia page
	renderings by 15%.
	(shr-tag-span): Don't respect the <title>, because that overwrites the
	help-echo from links inside the spans.
	(shr-next-link): Use `help-echo' for navigation, so that we can
	navigate to form elements, too.

	* eww.el (eww-button): New face.
	(eww-convert-widgets): Use it to make submit buttons more button-like.

	* mm-decode.el (mm-convert-shr-links): Override the shr local map, so
	that Gnus commands work.

	* shr.el (shr-render-td): Support horizontal alignment.

	* eww.el (eww-put-color): Removed.
	(eww-colorize-region): Use `add-face-text-property'.

	* shr.el (shr-add-font): Append face data, so that we get the correct
	presedence: The innermost value (which is applied first) wins.
	(shr-make-overlay): Obsolete function.

	* mm-decode.el (mm-convert-shr-links): New function to convert
	new-style shr URL links into widgets.
	(mm-shr): Use it.

	* eww.el (eww-mode-map): Use `shr-next-link' (etc) instead of the
	widget commands, since we're no longer using widgets for links.

	* shr.el (shr-next-link): New command.
	(shr-previous-link): New command.
	(shr-urlify): Don't use `widget-convert', because that's slow.
	(shr-put-color-1): Use `add-face-text-property' instead of overlays,
	because collecting the overlays and reapplying them when generating
	tables is slow.
	(shr-insert-table): Ditto.

2013-06-17  Stefan Monnier  <monnier@iro.umontreal.ca>

	* sieve.el (sieve-edit-script): Avoid beginning-of-buffer.
	* shr.el (browse-url): Require `url'.
	* eww.el (url): Require format-spec.
