@@ -1,5 +1,7 @@
 2013-06-17  Lars Magne Ingebrigtsen  <larsi@gnus.org>
 
+	* shr.el (shr-insert-table): Respect border-collapse: collapse.
+
 	* eww.el (eww-convert-widgets): Put `help-echo' on input fields so that
 	we can navigate to them.
 
